// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dependent Records > dependent pairs with path-dependent types > Dependent pair: matching singleton values pass 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?1 ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Num ~~ ?4",
      "Num ~~ ?3",
      "1 ~~ ?6",
      "Num ~~ Num",
      "Num ~~ ?5",
    ],
    "term": "{
  let Pair
    : Type
    = Σ($sig: [ snd: :fst, fst: Num ]) . Schema [ snd: :fst, fst: Num ];
  let p
    : Σ($sig: [ snd: :fst, fst: Num ]) .
      (closure: Schema [ snd: :fst, fst: Num ] -| Γ: Pair)
    = Struct [ snd: 1, fst: 1 ];
  return p;
}",
    "type": "Σ($sig: [ snd: :fst, fst: Num ]) .
  (closure: Schema [ snd: :fst, fst: Num ] -| Γ: Pair)",
  },
}
`;

exports[`Dependent Records > dependent pairs with path-dependent types > Pair instantiated with Num and String 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "?1 ~~ L1",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "String ~~ ?4",
      "Num ~~ ?3",
      "String ~~ String",
      "String ~~ ?6",
      "Num ~~ Num",
      "Num ~~ ?5",
    ],
    "term": "{
  let Pair
    : Π(a: Type) -> (closure: Π(p: Π(t1: a) -> Type) -> Type -| Γ: a)
    = λ(a: Type) ->
      λ(p: Π(t1: a) -> Type) ->
        Σ($sig: [ snd: p :fst, fst: a ]) . Schema [ snd: p :fst, fst: a ];
  let p
    : Σ($sig: [ snd: String, fst: Num ]) .
      (closure: Schema [ snd: p :fst, fst: a ] -| Γ: p; a; Pair)
    = Struct [ snd: "hello", fst: 1 ];
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Dependent Records > dependent pairs with path-dependent types > Pair: dependent pair with type dependent on first component 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "?1 ~~ L1",
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "{
  let Pair
    : Π(a: Type) -> (closure: Π(p: Π(t1: a) -> Type) -> Type -| Γ: a)
    = λ(a: Type) ->
      λ(p: Π(t1: a) -> Type) ->
        Σ($sig: [ snd: p :fst, fst: a ]) . Schema [ snd: p :fst, fst: a ];
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Dependent Records > dependent pairs with path-dependent types > Simple dependent pair 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?1 ~~ Type",
      "Type ~~ Type",
    ],
    "term": "{
  let Pair
    : Type
    = Σ($sig: [ snd: :fst, fst: Num ]) . Schema [ snd: :fst, fst: Num ];
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`Dependent Records > dependent pairs with refinement types > Dependent pair with refined second component 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "?1 ~~ L1",
      "L2 ~~ L2",
      "Bool ~~ Bool",
      "Type ~~ Type",
    ],
    "term": "{
  let Pair
    : Π(a: Type) ->
      (closure: Π(b: Type) ->
        Π(p: Π(t1: a) -> Π(t2: b) -> Bool) -> Type -| Γ: a)
    = λ(a: Type) ->
      λ(b: Type) ->
        λ(p: Π(t1: a) -> Π(t2: b) -> Bool) ->
          Σ($sig: [ snd: <ω> b [| λ(v: b) -> p :fst v |], fst: a ]) .
            Schema [ snd: <ω> b [| λ(v: b) -> p :fst v |], fst: a ];
  return unit;
}",
    "type": "Unit",
  },
}
`;
